--- a/app/src/main/res/layout/activity_font_page.xml
+++ b/app/src/main/res/layout/activity_font_page.xml
@@ -6,51 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="cursive"
-        android:gravity="center"
-        android:text="Welcome To Tic Tac Toe"
-        android:textColor="#FA0F0F"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:lottie_rawRes="@raw/loading"
+        android:background="#00BCD4"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        />
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="?attr/colorAccent"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:backgroundTint="@android:color/holo_orange_light"
-            android:text="START"
-            android:textColor="#151515"
-            android:textSize="35sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="80dp"
-            android:backgroundTint="@android:color/holo_orange_light"
-            android:gravity="center"
-            android:text="EXIT"
-            android:textColor="#050505"
-            android:textSize="35sp"
-            android:textStyle="bold" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
